<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textview_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/togglebutton_item_status"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        android:hint="@string/item_title"/>

    <TextView
        android:id="@+id/textview_item_dueDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_item_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/textview_dueDateText"/>

    <TextView
        android:id="@+id/textview_item_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textview_item_dueDateText"
        android:layout_below="@id/textview_item_title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="2dp"
        android:textSize="12sp"
        android:hint="@string/item_duewDate_hint"/>

    <TextView
        android:id="@+id/textview_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_item_dueDateText"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/textview_item_favorite"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:hint="@string/item_description"/>

    <ImageButton
        android:id="@+id/imagebutton_item_priority"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:background="@color/item_imagebutton_testColor"
        android:contentDescription="@string/item_priority_imagebuttonDesc"/>

    <ToggleButton
        android:id="@+id/togglebutton_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/imagebutton_item_priority"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textOff="@string/item_status_textOff"
        android:textOn="@string/item_status_textOn"/>

    <Switch
        android:id="@+id/switch_item_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/togglebutton_item_status"
        android:layout_toStartOf="@id/imagebutton_item_priority"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/textview_item_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/switch_item_favorite"
        android:layout_below="@id/togglebutton_item_status"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/item_favorite"/>

</RelativeLayout>