<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/textview_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/black"
        android:text="@string/dialog_title_choice"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:gravity="end">

        <TextView
            android:id="@+id/textview_dialog_edit"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:text="@string/dialog_edit_item"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:gravity="center"
            android:focusable="true" />

        <TextView
            android:id="@+id/textview_dialog_delete"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="@string/dialog_delete_item"
            android:clickable="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:focusable="true" />

    </LinearLayout>
</LinearLayout>